--- a/config.yml
+++ b/config.yml
@@ -16,8 +16,25 @@ Reporting:
     prefix:  ''
 Beacons:
   eddystone:
-    telemetry:
-      enabled: true
-      temp_enabled: true
+    default:
+      enabled: false
+      report_telemetry: false
+      report_rssi: false
       native_temp_unit: 'c'
+    devices:
+    - 'DF:0A:6A:74:BF:DD':
+        name: 'barn_ext'
+        enabled: true
+        report_telemetry: true
+        report_rssi: true
+        native_temp_unit: 'c'
+    - 'E5:15:AA:E0:53:F5':
+        name: 'workoutlandia'
+        enabled: true
   estimote:
+      default:
+        enabled: false
+        report_telemetry: false
+      devices:
+        -'sample':
+            mac: 'AA:AA:AA:AA:AA:AA'
