--- a/config.yml
+++ b/config.yml
@@ -7,6 +7,7 @@ Logging:
   loglevel: 'INFO'
   mark: true
   mark_count: 12
+  list_devices_in_cfg: true
   print_on_load: true
 
 Reporting:
@@ -14,7 +15,17 @@ Reporting:
     enabled: true
     host:    '127.0.0.1'
     port:    8125
-    prefix:  ''
+    prefix:  'pybeacon'
+  events:
+      default:
+        tick: false
+      scan:
+        tick: true
+      packet:
+        rx:
+          unknown:
+              tick: false
+
 Beacons:
   eddystone:
     default:
