--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,7 @@ Logging:
 Reporting:
   statsd:
     enabled: true
+    enabletcp: false
     host:    '127.0.0.1'
     port:    8125
     prefix:  'pybeacon'
@@ -41,13 +42,12 @@ Beacons:
       native_temp_unit: 'c'
       output_temp_unit: 'f'
     devices:
-      DF0A6A74BFDD:
-        name: 'barn_ext'
+      'AA:AA:AA:AA:AA:AA':
+        name: 'eddy_one'
         enabled: true
         report_telemetry: true
-        report_rssi: true
-      E515AAE053F5:
-        name: 'workoutlandia'
+      'BB:BB:BB:BB:BB:BB':
+        name: 'eddy_two'
         enabled: true
         report_telemetry: true
   estimote:
@@ -55,5 +55,5 @@ Beacons:
       enabled: false
       report_telemetry: false
     devices:
-      AAAAAAAAAAAA:
-          name: 'test'
+      'AA:AA:AA:AA:AA:AA':
+          name: 'esti_one'
