--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,5 @@
+#This file is not meant to be directly edited.
+#Your custom config is meant to reside in the local_cfg.yml file.
 Global:
   debug: false
   sleep_time: 5
